fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 .App {
   /* text-align: center; */
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
 }
