--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,15 +1,27 @@
+.navbarContainer {
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
 .navbarLogoContainer {
-  display: flex;
-  align-items: center;
+  display: inline-flex;
 }
 
 .navbarLogoImage {
   width: 170px;
-  height: 30px ;
+  height: 30px;
 }
 
 .navbarLogoText {
-    display: inline-block;
-    margin: 0;
-    font-size: 23px;
-  }
+  display: inline-block;
+  margin: 0;
+  margin-top: 3px;
+  font-size: 23px;
+}
+
+.navbarReload {
+  float: right;
+  border: 2px solid blue;
+  margin-top: 5px;
+
+}
